--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,10 +73,12 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "index.js"
+    entryFile: "index.js",
+    iconFontNames: [ 'FontAwesome.ttf', 'Ionicons.ttf', 'Entypo.ttf' ] 
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
