--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-moment": "^0.7.0",
     "react-native": "0.54.3",
     "react-native-datepicker": "^1.6.0",
+    "react-native-range-datepicker": "^1.8.2",
     "react-native-ui-xg": "0.0.6",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.8"
